--- a/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
+++ b/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20210406145542_Category.cs" />
+    <Compile Remove="Data\Migrations\20210406145542_Category.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210406150709_CategoryOffer.cs" />
+    <Compile Remove="Data\Migrations\20210406150709_CategoryOffer.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.12" />
