--- a/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
+++ b/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
@@ -11,14 +11,17 @@
     <Compile Remove="Data\Migrations\20210406145542_Category.Designer.cs" />
     <Compile Remove="Data\Migrations\20210406150709_CategoryOffer.cs" />
     <Compile Remove="Data\Migrations\20210406150709_CategoryOffer.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210406162951_aaa.cs" />
+    <Compile Remove="Data\Migrations\20210406162951_aaa.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.12">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.13">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
