--- a/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
+++ b/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
@@ -13,6 +13,10 @@
     <Compile Remove="Data\Migrations\20210406150709_CategoryOffer.Designer.cs" />
     <Compile Remove="Data\Migrations\20210406162951_aaa.cs" />
     <Compile Remove="Data\Migrations\20210406162951_aaa.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210517175124_a.cs" />
+    <Compile Remove="Data\Migrations\20210517175124_a.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210517180125_Atributs.cs" />
+    <Compile Remove="Data\Migrations\20210517180125_Atributs.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
