--- a/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
+++ b/Ogłoszenia Drobne Web App/Ogłoszenia Drobne Web App.csproj
@@ -17,6 +17,8 @@
     <Compile Remove="Data\Migrations\20210517175124_a.Designer.cs" />
     <Compile Remove="Data\Migrations\20210517180125_Atributs.cs" />
     <Compile Remove="Data\Migrations\20210517180125_Atributs.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210524155436_cascade_deletion.cs" />
+    <Compile Remove="Data\Migrations\20210524155436_cascade_deletion.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,9 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.12" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.13">
