Smtp outlook provider resert pass and change email

--- a/Ogłoszenia Drobne Web App/appsettings.json
+++ b/Ogłoszenia Drobne Web App/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "SmtpServers": {
+    "login": "freeelancerzy@outlook.com",
+    "password": "Hd/'?3j2xYuV[3p",
+    "port": 587,
+    "host": "smtp.office365.com"
+  },
   "AllowedHosts": "*"
 }
